Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-homework-api
spec:
  selector:
    app: otus-homework-api
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
